voting and result logic

--- a/app/src/main/res/layout/fragment_computing_vote.xml
+++ b/app/src/main/res/layout/fragment_computing_vote.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="58dp"
-    tools:context=".fragments.vote.voteNow.VoteNowFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.vote.chooseSchools.computing.ComputingVoteFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/voteNowRecyclerView"
+        android:id="@+id/computingRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,6 +29,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
