--- a/app/src/main/res/layout/school_recycerview_row_result_layout.xml
+++ b/app/src/main/res/layout/school_recycerview_row_result_layout.xml
@@ -9,9 +9,9 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/menRepProfileImage"
+        android:id="@+id/schoolRepProfileImage"
         android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_height="110dp"
         android:layout_margin="5dp"
         android:src="@drawable/profile"
         app:civ_border_color="@color/teal_200"
@@ -21,51 +21,54 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/menRepName"
-        android:layout_width="wrap_content"
+        android:id="@+id/schoolRepName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="Name:"
         android:textSize="20sp"
-        android:layout_margin="5dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/menRepProfileImage"
-        app:layout_constraintTop_toTopOf="@+id/menRepProfileImage" />
+        app:layout_constraintEnd_toEndOf="@+id/schoolRepSchool"
+        app:layout_constraintStart_toEndOf="@+id/schoolRepProfileImage"
+        app:layout_constraintTop_toTopOf="@+id/schoolRepProfileImage" />
 
     <TextView
-        android:id="@+id/menRepSchool"
-        android:layout_width="wrap_content"
+        android:id="@+id/schoolRepSchool"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="School:"
         android:textSize="20sp"
-        android:layout_margin="5dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/menRepProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/menRepName" />
+        app:layout_constraintEnd_toStartOf="@+id/schoolRepResult"
+        app:layout_constraintStart_toEndOf="@+id/schoolRepProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/schoolRepName" />
 
     <TextView
-        android:id="@+id/menRepPosition"
-        android:layout_width="wrap_content"
+        android:id="@+id/schoolRepPosition"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="Position:"
         android:textSize="20sp"
-        android:layout_margin="5dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/menRepProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/menRepSchool" />
+        app:layout_constraintEnd_toStartOf="@+id/schoolRepResult"
+        app:layout_constraintStart_toEndOf="@+id/schoolRepProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/schoolRepSchool" />
 
     <TextView
-        android:id="@+id/menRepResult"
+        android:id="@+id/schoolRepResult"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
-        android:text="88%"
-        android:textSize="40sp"
-        android:textAlignment="center"
         android:gravity="center"
+        android:text="88%"
+        android:textAlignment="center"
+        android:textSize="23sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
