--- a/app/src/main/res/layout/school_recycerview_row_vote_layout.xml
+++ b/app/src/main/res/layout/school_recycerview_row_vote_layout.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="4dp"
     android:layout_margin="2dp"
+    android:padding="4dp"
     android:layout_height="wrap_content">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/womenRepProfileImage"
+        android:id="@+id/schoolRepProfileImage"
         android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_height="110dp"
         android:layout_margin="5dp"
         android:src="@drawable/profile"
         app:civ_border_color="@color/teal_200"
@@ -20,50 +20,52 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/womenRepName"
-        android:layout_width="wrap_content"
+        android:id="@+id/schoolRepName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="Name:"
         android:textSize="20sp"
-        android:layout_margin="5dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/womenRepProfileImage"
-        app:layout_constraintTop_toTopOf="@+id/womenRepProfileImage" />
+        app:layout_constraintEnd_toEndOf="@+id/schoolRepSchool"
+        app:layout_constraintStart_toEndOf="@+id/schoolRepProfileImage"
+        app:layout_constraintTop_toTopOf="@+id/schoolRepProfileImage" />
 
     <TextView
-        android:id="@+id/womenRepSchool"
-        android:layout_width="wrap_content"
+        android:id="@+id/schoolRepSchool"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="School:"
         android:textSize="20sp"
-        android:layout_margin="5dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/womenRepProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/womenRepName" />
+        app:layout_constraintEnd_toStartOf="@+id/schoolRepVoteCheckBox"
+        app:layout_constraintStart_toEndOf="@+id/schoolRepProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/schoolRepName" />
 
     <TextView
-        android:id="@+id/womenRepPosition"
-        android:layout_width="wrap_content"
+        android:id="@+id/schoolRepPosition"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="Position:"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/womenRepProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/womenRepSchool" />
+        app:layout_constraintEnd_toStartOf="@+id/schoolRepVoteCheckBox"
+        app:layout_constraintStart_toEndOf="@+id/schoolRepProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/schoolRepSchool" />
 
 
     <CheckBox
-        android:id="@+id/womenRepVoteCheckBox"
+        android:id="@+id/schoolRepVoteCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
         android:text="VOTE"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
